# PasswordBook

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  auto-format-codes.py  generator.conf
doc/: CMakeLists.txt  Doxyfile.in  PWD_PLAN.md
doc/research/: PWD_PLAN.md  encrypt_demo.py  prototype.py
src/: .passwordManager.h.swp  CMakeLists.txt  cmdSeparator.cpp  cmdSeparator.h  cmdSeprator.h  crypto.cpp  crypto.h  main.cpp  miscUtil.cpp  miscUtil.h  passwordGenerator.cpp  passwordGenerator.h  passwordManager.cpp  passwordManager.h  randomTool.cpp  randomTool.h  regextool.cpp  regextool.h  saveConfig.cpp  saveConfig.h  simpleColor.h  sslTool.h  stringTool.cpp  stringTool.h  stringTool_util.h
src/grpc/: .gitignore  CMakeLists.txt  Makefile  Makefile2  iniParser.h  password_service.cc  password_service.ini  password_service.js  password_service.proto
src/grpc/web/: .babelrc  .tern-project  package.json  server.js  webpack.config.js
src/grpc/web/app/: index.js
src/grpc/web/html/: index.html  test.html
src/grpc/web/nodejs/: password_service.js  server.js
test/: CMakeLists.txt  test_crypto.cpp
